--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "author": "Akshay Tolani",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "nodemon": "^3.1.7"
   }
 }
